--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
           <version>4.3.1.RELEASE</version>
       </dependency>
 
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.18</version>
+    </dependency>
+
   </dependencies>
 
   <build>
