--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
       <version>1.2.18</version>
     </dependency>
 
+    <!-- JSTL -->
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
