--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <version>1.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
